--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 
   /*========== Colors ==========*/
   /* Change favorite color */
-  --hue-color: 225;
-  /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+  --hue-color:100;
+  /*Purple 250 - Green 142 - Blue 230 - Pink 340 225*/
 
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -313,6 +313,7 @@ img {
 
 .home__blob-img {
   width: 170px;
+  
 }
 
 .home__data {
